What's New for OpenJPIP

* : fixed
- : removed
! : changed
+ : added

October 20, 2011
+ [added] API style in openJPIP library
! [kaori] rearranged directories, applications are all under util/ directory, currently only 'make -f Makefile.nix' works

October 18, 2011
! [kaori] rearranged opj_server, opj_dec_server directory

October 14, 2011
+ [kaori] enable all progression orders

October 12, 2011
+ [kaori] enable layers requests; restricting the number of codesream quality layers

October 10, 2011
- [antonin] removed obsolete indexer utility
+ [kaori]   enable JPT-stream request from client viewer option

September 30, 2011
+ [kaori] enabled JPP-stream

September 16, 2011
+ [kaori] enabled stateless requests from the opj_viewers

Septempber 1, 2011
* [kaori] changed terminating status of opj_server in debug/non-server mode

August 27, 2011
* [antonin] fixed missing include directory in opj_client/opj_dec_server/CMakeLists.txt

August 26, 2011
* [antonin] fixed cmake and autotools files to reflect recent indexer changes in JPIP
! [kaori] indexer using the latest openjpeg library
* [antonin] fixed cmake and autotools files to reflect recent changes in JPIP
! [kaori] fixed Makefile.nix to load openjpeg library from this archive

August 25, 2011
+ [kaori] added tid request support to JPIP client
+ [kaori] added quit JPIP server request

August 24, 2011
+ [kaori] added cachemodel_manager, which had been managed in target_manager previously
+ [kaori] added tid request support to JPIP server

August 16, 2011
* [antonin] fixed cmake support for openjpip

August 12, 2011
+ [antonin] added cmake support to openjpip

July 6, 2011
* [antonin] JPIP : fixed autotools to work with recent name changes

July 5, 2011
! [kaori] changed parameter, file names, message names regarding JPT-stream to JPIP-stream, which handles also JPP-stream

May 26, 2011
! [antonin] changed Makefile to Makefile.nix to avoid having autotools overwrite them.

May 23, 2011