@@ -1,3 +1,3 @@
 MAINTAINERCLEANFILES = Makefile.in
 
-SUBDIRS = libopenjpip opj_server opj_client tools
+SUBDIRS = libopenjpip util
